[gd_scene load_steps=5 format=3 uid="uid://bkqt7j2s3xv6m"]

[ext_resource type="Script" path="res://scripts/ui/achievement_item.gd" id="1_item"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_item"]
bg_color = Color(0.15, 0.15, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.4, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 16
font_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_desc"]
font_size = 12
font_color = Color(0.7, 0.7, 0.7, 1)

[node name="AchievementItem" type="PanelContainer"]
custom_minimum_size = Vector2(0, 80)
offset_right = 600.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_item")
script = ExtResource("1_item")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="HBox" type="HBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="IconRect" type="TextureRect" parent="Margin/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBox" type="VBoxContainer" parent="Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="HeaderBox" type="HBoxContainer" parent="Margin/HBox/VBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Margin/HBox/VBox/HeaderBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Achievement Title"
label_settings = SubResource("LabelSettings_title")

[node name="TierLabel" type="Label" parent="Margin/HBox/VBox/HeaderBox"]
unique_name_in_owner = true
layout_mode = 2
text = "GOLD"

[node name="DescriptionLabel" type="Label" parent="Margin/HBox/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Achievement description"
label_settings = SubResource("LabelSettings_desc")

[node name="ProgressLabel" type="Label" parent="Margin/HBox/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Progress: 0/100"

[node name="StatusLabel" type="Label" parent="Margin/HBox/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "LOCKED"
